// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`基础渲染 1`] = `
<div
  className="sc-gtssRu hkGMHR sinoui-steps"
>
  <div
    className="sc-jSFkmK dZAxZn sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container"
    >
      <div
        className="sc-pNWxx muyFB sinoui-step-number-icon"
      >
        1
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj bhTxCP sinoui-step-title"
        >
          第一步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-eCApGN jMOvUe sinoui-step-connector"
  >
    <hr
      className="sc-bdnylx sc-dlnjPT oMesJ bJpRnU sinoui-divider"
    />
  </div>
  <div
    className="sc-jSFkmK dZAxZn sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container"
    >
      <div
        className="sc-pNWxx kWWNQK sinoui-step-number-icon"
      >
        2
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj liCEZq sinoui-step-title"
        >
          第二步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-eCApGN jMOvUe sinoui-step-connector"
  >
    <hr
      className="sc-bdnylx sc-dlnjPT oMesJ bJpRnU sinoui-divider"
    />
  </div>
  <div
    className="sc-jSFkmK dZAxZn sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container"
    >
      <div
        className="sc-pNWxx kWWNQK sinoui-step-number-icon"
      >
        3
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj liCEZq sinoui-step-title"
        >
          第三步
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`正确渲染--垂直方向步进器 1`] = `
<div
  className="sc-gtssRu dAWTNZ sinoui-steps sinoui-steps--vertical"
  direction="vertical"
>
  <div
    className="sc-jSFkmK dZAxZn sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container"
    >
      <div
        className="sc-pNWxx muyFB sinoui-step-number-icon"
      >
        1
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj bhTxCP sinoui-step-title"
        >
          第一步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-eCApGN jMOvUe sinoui-step-connector"
  >
    <hr
      className="sc-bdnylx sc-dlnjPT dagirI gipmCd sinoui-divider sinoui-divider--vertical"
    />
  </div>
  <div
    className="sc-jSFkmK dZAxZn sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container"
    >
      <div
        className="sc-pNWxx kWWNQK sinoui-step-number-icon"
      >
        2
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj liCEZq sinoui-step-title"
        >
          第二步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-eCApGN jMOvUe sinoui-step-connector"
  >
    <hr
      className="sc-bdnylx sc-dlnjPT dagirI gipmCd sinoui-divider sinoui-divider--vertical"
    />
  </div>
  <div
    className="sc-jSFkmK dZAxZn sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container"
    >
      <div
        className="sc-pNWxx kWWNQK sinoui-step-number-icon"
      >
        3
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj liCEZq sinoui-step-title"
        >
          第三步
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`正确渲染--垂直方向步进器且标签垂直布局 1`] = `
<div
  className="sc-gtssRu lnoPbF sinoui-steps sinoui-steps--vertical"
  direction="vertical"
>
  <div
    className="sc-jSFkmK cZHPvi sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container sinoui-step-container--vertical"
    >
      <div
        className="sc-pNWxx muyFB sinoui-step-number-icon"
      >
        1
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj bhTxCP sinoui-step-title"
        >
          第一步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-eCApGN jMOvUe sinoui-step-connector"
  >
    <hr
      className="sc-bdnylx sc-dlnjPT dagirI gipmCd sinoui-divider sinoui-divider--vertical"
    />
  </div>
  <div
    className="sc-jSFkmK cZHPvi sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container sinoui-step-container--vertical"
    >
      <div
        className="sc-pNWxx kWWNQK sinoui-step-number-icon"
      >
        2
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj liCEZq sinoui-step-title"
        >
          第二步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-eCApGN jMOvUe sinoui-step-connector"
  >
    <hr
      className="sc-bdnylx sc-dlnjPT dagirI gipmCd sinoui-divider sinoui-divider--vertical"
    />
  </div>
  <div
    className="sc-jSFkmK cZHPvi sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container sinoui-step-container--vertical"
    >
      <div
        className="sc-pNWxx kWWNQK sinoui-step-number-icon"
      >
        3
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj liCEZq sinoui-step-title"
        >
          第三步
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`正确渲染--标签垂直布局 1`] = `
<div
  className="sc-gtssRu cvQPqY sinoui-steps"
>
  <div
    className="sc-jSFkmK cZHPvi sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-eCApGN jMOvUe sinoui-step-connector"
    >
      <hr
        className="sc-bdnylx sc-dlnjPT oMesJ bJpRnU sinoui-divider"
      />
    </div>
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container sinoui-step-container--vertical"
    >
      <div
        className="sc-pNWxx muyFB sinoui-step-number-icon"
      >
        1
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj bhTxCP sinoui-step-title"
        >
          第一步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-jSFkmK cZHPvi sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-eCApGN jMOvUe sinoui-step-connector"
    >
      <hr
        className="sc-bdnylx sc-dlnjPT oMesJ bJpRnU sinoui-divider"
      />
    </div>
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container sinoui-step-container--vertical"
    >
      <div
        className="sc-pNWxx kWWNQK sinoui-step-number-icon"
      >
        2
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj liCEZq sinoui-step-title"
        >
          第二步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-jSFkmK cZHPvi sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hfQfpM sinoui-step-container sinoui-step-container--vertical"
    >
      <div
        className="sc-pNWxx kWWNQK sinoui-step-number-icon"
      >
        3
      </div>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj liCEZq sinoui-step-title"
        >
          第三步
        </span>
      </div>
    </div>
  </div>
</div>
`;
